add new website from server na

--- a/xem-phim-bo/ban-trai-cu-la-sep-cua-toi/index.html
+++ b/xem-phim-bo/ban-trai-cu-la-sep-cua-toi/index.html
@@ -1185,7 +1185,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             7
+             9
             </dd>
             <br/>
            </dl>
@@ -1765,18 +1765,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/mat-day-phan-11" title="Mặt Dày (Phần 11)">
+          <a class="list-top-movie-link" href="/phim-moi/neu-co-the-tro-ve-luc-dau-truyen-ky-phong-cach-hong-kong" title="Nếu Có Thể Trở Về Lúc Đầu: Truyền Kỳ Phong Cách Hồng Kông">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/mat-day-phan-11-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/neu-co-the-tro-ve-luc-dau-truyen-ky-phong-cach-hong-kong-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Mặt Dày (Phần 11)
+             Nếu Có Thể Trở Về Lúc Đầu: Truyền Kỳ Phong Cách Hồng Kông
             </span>
             <span class="list-top-movie-item-en">
-             Shameless (Season 11)
+             If at First: The Legend in HK
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1787,21 +1787,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bo-tay-chiu-troi-di-doi-truong-han" title="Bó Tay Chịu Trói Đi Đội Trưởng Hàn">
+          <a class="list-top-movie-link" href="/phim-moi/max-va-toi" title="Max và Tôi">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bo-tay-chiu-troi-di-doi-truong-han-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/max-va-toi-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Bó Tay Chịu Trói Đi Đội Trưởng Hàn
+             Max và Tôi
             </span>
             <span class="list-top-movie-item-en">
-             Captain Han
+             Max and Me
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1809,21 +1809,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/manh-ho-vo-lam" title="Mãnh Hổ Võ Lâm">
+          <a class="list-top-movie-link" href="/phim-moi/qua-nhanh-qua-nguy-hiem-10" title="Quá Nhanh Quá Nguy Hiểm 10">
            <span class="status">
-            HD Lồng Tiếng
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/manh-ho-vo-lam-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/qua-nhanh-qua-nguy-hiem-10-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Mãnh Hổ Võ Lâm
+             Quá Nhanh Quá Nguy Hiểm 10
             </span>
             <span class="list-top-movie-item-en">
-             Mãnh Hổ Võ Lâm
+             Fast X
             </span>
             <span class="list-top-movie-item-view">
-             0 lượt xem
+             4 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1831,21 +1831,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/one-chance" title="One Chance">
+          <a class="list-top-movie-link" href="/phim-moi/cong-dong-trong-tuyet" title="Cộng đồng trong tuyết">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/one-chance-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cong-dong-trong-tuyet-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             One Chance
+             Cộng đồng trong tuyết
             </span>
             <span class="list-top-movie-item-en">
-             One Chance
+             Society of the Snow
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1853,18 +1853,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/chu-chuot-dau-bep" title="Chú Chuột Đầu Bếp">
+          <a class="list-top-movie-link" href="/phim-moi/jack-whitehall-lam-cha-qua-loi-cua-cha-toi" title="Jack Whitehall: Làm cha qua lời của cha tôi">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chu-chuot-dau-bep-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/jack-whitehall-lam-cha-qua-loi-cua-cha-toi-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Chú Chuột Đầu Bếp
+             Jack Whitehall: Làm cha qua lời của cha tôi
             </span>
             <span class="list-top-movie-item-en">
-             Ratatouille
+             Jack Whitehall: Travels with My Father
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
