add new website from server na

--- a/xem-phim-bo/lan-ket-hon-dau-tien/index.html
+++ b/xem-phim-bo/lan-ket-hon-dau-tien/index.html
@@ -1189,7 +1189,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             5
+             6
             </dd>
             <br/>
            </dl>
@@ -1659,18 +1659,84 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nuong-tu-nha-ta-khong-de-choc" title="Nương Tử Nhà Ta Không Dễ Chọc">
+          <a class="list-top-movie-link" href="/phim-moi/the-first-time" title="The First Time">
            <span class="status">
-            hd Vietsub
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nuong-tu-nha-ta-khong-de-choc-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/the-first-time-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Nương Tử Nhà Ta Không Dễ Chọc
+             The First Time
             </span>
             <span class="list-top-movie-item-en">
-             My Sassy Wife
+             The First Time
+            </span>
+            <span class="list-top-movie-item-view">
+             0 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/em-la-dinh-menh-cua-anh" title="Em là định mệnh của anh">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/em-la-dinh-menh-cua-anh-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Em là định mệnh của anh
+            </span>
+            <span class="list-top-movie-item-en">
+             You are My Destiny
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/truong-kiem-tuong-tu" title="Trường Kiếm Tương Tư">
+           <span class="status">
+            HD Lồng Tiếng
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/truong-kiem-tuong-tu-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Trường Kiếm Tương Tư
+            </span>
+            <span class="list-top-movie-item-en">
+             Trường Kiếm Tương Tư
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/chuyen-phat-nhanh-bff" title="Chuyển phát nhanh BFF">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chuyen-phat-nhanh-bff-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Chuyển phát nhanh BFF
+            </span>
+            <span class="list-top-movie-item-en">
+             BFF Courier
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1681,87 +1747,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cuoc-goi-bi-an-2" title="Cuộc Gọi Bí Ẩn">
+          <a class="list-top-movie-link" href="/phim-moi/cam-tu-tien-trinh" title="Cẩm Tú Tiền Trình">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cuoc-goi-bi-an-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cam-tu-tien-trinh-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cuộc Gọi Bí Ẩn
+             Cẩm Tú Tiền Trình
             </span>
             <span class="list-top-movie-item-en">
-             Hard Hit
+             Long And Winding Road
             </span>
             <span class="list-top-movie-item-view">
-             5 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/diet-vong" title="Diệt Vong">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/diet-vong-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Diệt Vong
-            </span>
-            <span class="list-top-movie-item-en">
-             Extinction
-            </span>
-            <span class="list-top-movie-item-view">
-             4 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/will" title="Will">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/will-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Will
-            </span>
-            <span class="list-top-movie-item-en">
-             Will
-            </span>
-            <span class="list-top-movie-item-view">
-             5 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/su-hanh-dong-chong-dua-xe" title="Sự Hành Động Chống Đua Xe">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/su-hanh-dong-chong-dua-xe-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Sự Hành Động Chống Đua Xe
-            </span>
-            <span class="list-top-movie-item-en">
-             Anti Racing Action
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
