add new website from server na

--- a/xem-phim-moi/cong-su-hoan-hao/index.html
+++ b/xem-phim-moi/cong-su-hoan-hao/index.html
@@ -1186,7 +1186,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             6
+             8
             </dd>
             <br/>
            </dl>
@@ -1656,21 +1656,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/dau-chien-tuyen" title="Đầu Chiến Tuyến">
+          <a class="list-top-movie-link" href="/phim-moi/chi-em" title="Chị em">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dau-chien-tuyen-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chi-em-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Đầu Chiến Tuyến
+             Chị em
             </span>
             <span class="list-top-movie-item-en">
-             The Front Line
+             Sisters
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             4 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1678,18 +1678,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/benim-hayatim" title="Benim Hayatim">
+          <a class="list-top-movie-link" href="/phim-moi/lau-dai-tham-vong" title="Lâu Đài Tham Vọng">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/benim-hayatim-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/lau-dai-tham-vong-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Benim Hayatim
+             Lâu Đài Tham Vọng
             </span>
             <span class="list-top-movie-item-en">
-             My Life
+             Sky Castle
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1700,40 +1700,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/spark-thien-du-ky" title="Spark: Thiên Du Ký">
+          <a class="list-top-movie-link" href="/phim-moi/lupin-iii-vs-detective-conan-the-movie" title="Lupin III vs. Detective Conan: The Movie">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/spark-thien-du-ky-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/lupin-iii-vs-detective-conan-the-movie-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Spark: Thiên Du Ký
+             Lupin III vs. Detective Conan: The Movie
             </span>
             <span class="list-top-movie-item-en">
-             Spark: A Space Tail
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tinh-yeu-tim-lai" title="Tình Yêu Tìm Lại">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tinh-yeu-tim-lai-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Tình Yêu Tìm Lại
-            </span>
-            <span class="list-top-movie-item-en">
-             Silver Linings Playbook
+             Lupin III vs. Detective Conan: The Movie
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1744,18 +1722,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/paris-toc-hanh" title="Paris Tốc Hành">
+          <a class="list-top-movie-link" href="/phim-moi/tinh-yeu-cua-con-gai-3" title="Tình Yêu Của Con Gái 3">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/paris-toc-hanh-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tinh-yeu-cua-con-gai-3-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Paris Tốc Hành
+             Tình Yêu Của Con Gái 3
             </span>
             <span class="list-top-movie-item-en">
-             Coursier
+             Tình Yêu Của Con Gái 3
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/chung-ta-cung-nhau-lac-mat-troi" title="Chúng Ta Cùng Nhau Lắc Mặt Trời">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chung-ta-cung-nhau-lac-mat-troi-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Chúng Ta Cùng Nhau Lắc Mặt Trời
+            </span>
+            <span class="list-top-movie-item-en">
+             Viva La Vida
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
